--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
 
     <main class="apresentacao">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo-paragrafo">Bem-vindo à Floricultura Araçá: Beleza e Natureza ao Seu Alcance</h1>
-            <p class="apresentacao-conteudo-texto">Transforme momentos especiais em memórias inesquecíveis com as nossas flores. Na Floricultura Araçá, a natureza se transforma em arte</p>
+            <img src="./fotos/logo-cantinhodasflores.jpg" alt="logo Cantinho das flores" class="fotos-logo">
+            <h1 class="apresentacao-conteudo-titulo">Bem-vindo à Floricultura Cantinho das flores: Beleza e Natureza ao Seu Alcance</h1>
+            <p class="apresentacao-conteudo-texto">Transforme momentos especiais em memórias inesquecíveis com as nossas flores. Na Floricultura Cantinho das flores, a natureza se transforma em arte</p>
         </section>
 
     </main>
 
 
     <footer class="rodape">
-        <p>telefone para contato: (18) 3625xxxx</p>
+        <p> telefone para contato: (18) 3625xxxx</p>
 
     </footer>
     
