--- a/produtos/cacto.html
+++ b/produtos/cacto.html
@@ -17,11 +17,11 @@
          </header>
      </header>
 
-     <main class="apresentacao">
+     <main class="apresentacao-produtos">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo-paragrafo">Cacto</h1>
+            <h1 class="apresentacao-conteudo-titulo">Cacto</h1>
             
-            <img src="../fotos/Cacto.jpg" alt="foto de cactos"> 
+            <img src="../fotos/Cacto.jpg" alt="foto de cactos" class="fotos-produtos"> 
 
 
             <p class="apresentacao-conteud-texto">Os cactos são plantas suculentas que pertencem à família Cactaceae, sendo conhecidos por sua capacidade de armazenar água em seus tecidos, o que lhes permite sobreviver em ambientes áridos e desertos. Eles apresentam uma variedade impressionante de formas e tamanhos, desde pequenos cactos em miniatura até grandes cactos colunares que podem atingir várias metros de altura.</p>
