--- a/produtos/comigoninguempode.html
+++ b/produtos/comigoninguempode.html
@@ -18,8 +18,8 @@
 
      <main class="apresentacao">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo-paragrafo">Comigo-ninguem-pode</h1>
-            <img src="../fotos/comigo_ninguem_pode.jpg" alt="foto da planta comigo ninguem pode">
+            <h1 class="apresentacao-conteudo-titulo">Comigo-ninguem-pode</h1>
+            <img src="../fotos/comigo_ninguem_pode.jpg" alt="foto da planta comigo ninguem pode" class="fotos-produtos">
 
             <p class="apresentacao-conteudo-texto">Comigo-ninguém-pode (Euphorbia tirucalli), também conhecida como "vara-de-piche" ou "falso cacto", é uma planta suculenta nativa da África e amplamente cultivada em regiões tropicais e subtropicais. Essa planta é facilmente reconhecível por seus ramos longos e finos, que podem crescer verticalmente, lembrando uma vara ou bastão. Os ramos são verde-claros e podem atingir até 3 metros de altura.</p>
             <p class="apresentacao-conteudo-texto">A "comigo-ninguém-pode" é uma planta resistente e de baixa manutenção, preferindo ambientes ensolarados e solo bem drenado. Ela armazena água em seus ramos, o que a torna bastante tolerante à seca, sendo uma ótima opção para jardins xerófitos ou como planta de interior.</p>
