--- a/produtos/costeladeadao.html
+++ b/produtos/costeladeadao.html
@@ -18,9 +18,9 @@
 
      <main class="apresentacao">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo_-aragrafo">Costela de Adão</h1>
+            <h1 class="apresentacao-conteudo-titulo">Costela de Adão</h1>
 
-            <img src="../fotos/Costela_de_Adao.jpg" alt="foto da planta costela de adão">
+            <img src="../fotos/Costela_de_Adao.jpg" alt="foto da planta costela de adão" class="fotos-produtos">
 
             <p class="apresentacao-conteudo-texto">A costela de adão (Monstera deliciosa) é uma planta tropical conhecida por suas folhas grandes, verdes e características que apresentam cortes e furos, dando a impressão de uma "costela". Nativa das florestas tropicais do México e da América Central, essa planta pode crescer como uma trepadeira, subindo por troncos de árvores ou se espalhando pelo chão.</p>
             <p class="apresentacao-conteudo-texto">As folhas da costela de adão podem atingir até 1 metro de comprimento e têm uma textura cerosa e brilhante. Com o tempo, à medida que a planta envelhece, as folhas desenvolvem mais cortes e furos, o que a torna ainda mais distinta e decorativa. A planta também produz flores brancas e, posteriormente, frutos comestíveis que têm um sabor que lembra uma mistura de abacaxi e banana, embora seu consumo deva ser feito com cautela, pois os frutos só estão prontos para o consumo quando completamente maduros.</p>
