--- a/produtos/croton.html
+++ b/produtos/croton.html
@@ -18,9 +18,9 @@
 
      <main class="apresentacao">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo-paragrafo">Cróton</h1>
+            <h1 class="apresentacao-conteudo-titulo">Cróton</h1>
 
-            <img src="../fotos/Cróton.jpg" alt="foto da planta Cróton">
+            <img src="../fotos/Cróton.jpg" alt="foto da planta Cróton" class="fotos-produtos">
 
             <p class="apresentacao-conteudo-texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.</p>
             <p class="apresentacao-conteudo-texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.
