--- a/produtos/espadadesaojorge.html
+++ b/produtos/espadadesaojorge.html
@@ -18,9 +18,9 @@
 
      <main class="apresentacao">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo-paragrafo">Espada de São Jorge</h1>
+            <h1 class="apresentacao-conteudo-titulo">Espada de São Jorge</h1>
 
-            <img src="../fotos/espada_de_sao_jorge.jpg" alt="foto da planta espada de são jorge">
+            <img src="../fotos/espada_de_sao_jorge.jpg" alt="foto da planta espada de são jorge" class="fotos-produtos">
 
             <p class="apresentacao-conteudo-texto">A Espada de São Jorge (Sansevieria trifasciata), também conhecida como "língua de sogra", é uma planta suculenta muito resistente, famosa por suas longas folhas verticais e rígidas que se assemelham a espadas. As folhas são verdes-escuro com listras horizontais mais claras, e algumas variedades possuem bordas amareladas. Sua aparência elegante e minimalista faz dela uma das plantas de interior mais populares.</p>
             <p class="apresentacao-conteudo-texto">Originária da África Ocidental, a Espada de São Jorge é extremamente adaptável, podendo crescer em diversas condições de luz, desde luz solar direta até ambientes com pouca iluminação. Além disso, requer pouca água, pois armazena umidade em suas folhas espessas, sendo ideal para quem procura uma planta de baixa manutenção.</p>
