--- a/produtos/ficuselastica.html
+++ b/produtos/ficuselastica.html
@@ -18,9 +18,9 @@
 
      <main class="apresentacao">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo-paragrafo">Ficus Elástica</h1>
+            <h1 class="apresentacao-conteudo-titulo">Ficus Elástica</h1>
 
-            <img src="../fotos/Ficus_Elastica.jpg" alt="foto da planta Ficus Elastica">
+            <img src="../fotos/Ficus_Elastica.jpg" alt="foto da planta Ficus Elastica" class="fotos-produtos">
 
             <p class="apresentacao-conteudo-texto">O Ficus Elástica, também conhecido como figueira-borracha ou árvore-da-borracha, é uma planta ornamental popular devido às suas grandes e brilhantes folhas verdes e sua robustez. Suas folhas são espessas, coriáceas e ovais, variando de verde-escuro a verde-claro, com algumas variedades exibindo bordas rosadas ou amareladas. Quando jovens, as folhas novas podem surgir envoltas em uma capa vermelha que se desfaz à medida que a folha se expande.</p>
             <p class="apresentacao-conteudo-texto">Nativa das florestas tropicais do sudeste asiático, o Ficus Elástica pode atingir grandes alturas quando cultivado ao ar livre, chegando a até 30 metros, mas como planta de interior, ele geralmente se mantém entre 1 e 3 metros. Seu nome comum, "árvore-da-borracha", vem do látex espesso que sua seiva produz, que já foi utilizado para a fabricação de borracha.</p>
