--- a/produtos/orquidea.html
+++ b/produtos/orquidea.html
@@ -19,9 +19,9 @@
          
      <main class="apresentacao">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao_-onteudo-paragrafo">Orquídeas</h1>
+            <h1 class="apresentacao-conteudo-titulo">Orquídeas</h1>
 
-            <img src="../fotos/orquidea.jpg" alt="foto da for orquidea">
+            <img src="../fotos/orquidea.jpg" alt="foto da for orquidea" class="fotos-produtos">
 
             <p class="apresentacao-conteudo-texto">As orquídeas são flores elegantes e exóticas conhecidas por sua incrível diversidade de formas, cores e tamanhos. Elas pertencem à família Orchidaceae, uma das maiores famílias de plantas do mundo. As orquídeas têm flores simétricas, geralmente com três pétalas e três sépalas, sendo que a pétala central, chamada de "labelo", é muitas vezes maior e diferenciada, atraindo polinizadores. Elas podem ser encontradas em uma vasta gama de cores, como branco, rosa, roxo, amarelo, laranja, vermelho e até combinando diferentes tons.</p>
             <p class="apresentacao-conteudo-texto">Essas plantas são epífitas, o que significa que crescem em troncos ou galhos de árvores, absorvendo umidade e nutrientes do ar. Embora sejam associadas a climas tropicais, as orquídeas podem ser encontradas em quase todos os ambientes, exceto os desertos mais áridos e as regiões polares.</p>
