--- a/produtos/girasol.html
+++ b/produtos/girasol.html
@@ -17,9 +17,9 @@
 
      <main class="apresentacao">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao_-onteudo-paragrafo">Girassol</h1>
+            <h1 class="apresentacao-conteudo-titulo">Girassol</h1>
 
-            <img src="../fotos/girasol.jpg" alt="foto de girasol">
+            <img src="../fotos/girasol.jpg" alt="foto de girasol" class="fotos-produtos">
 
             <p class="apresentacao-conteudo-texto">O girassol (Helianthus annuus) é uma planta herbácea conhecida por suas grandes e chamativas flores que acompanham o movimento do sol, um fenômeno chamado heliotropismo. Suas flores são compostas por uma coroa de pétalas amarelas brilhantes ao redor de um disco central, que pode variar de amarelo a marrom, dependendo da variedade. Esse disco central é composto de inúmeras flores menores, que posteriormente se transformam em sementes.</p>
             <p class="apresentacao-conteudo-texto">O girassol pode crescer de 1 a 3 metros de altura, com um caule grosso e áspero que sustenta as flores. As folhas são grandes, em forma de coração, e têm uma textura áspera. O girassol é nativo da América do Norte, mas é cultivado em várias partes do mundo, principalmente por suas sementes, que são usadas para produzir óleo de girassol e como alimento.</p>
