--- a/produtos/bambudasorte.html
+++ b/produtos/bambudasorte.html
@@ -16,7 +16,7 @@
 
      </header>
 
-     <main class="apresentacao-produtos">
+     <main class="apresentacao">
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo">Bambu da sorte</h1>
             
@@ -29,7 +29,12 @@
 
     </main>
 
-    <footer></footer>
+    <footer class="rodape">
+        <p>telefone para contato: (18) 3625xxxx</p>
+        <p>Endereço: Rua dos Fundadores n° 3000 Araçatuba-sp</p>
+        <br>
+        <img src="../fotos/logo-cantinho-rodape.jpg" alt="logo cantinho das flores" class="img-rodape">
+    </footer>
     
 </body>
 </html>
