--- a/produtos/croton.html
+++ b/produtos/croton.html
@@ -23,15 +23,19 @@
             <img src="../fotos/Cróton.jpg" alt="foto da planta Cróton" class="fotos-produtos">
 
             <p class="apresentacao-conteudo-texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.</p>
-            <p class="apresentacao-conteudo-texto">O cróton (Codiaeum variegatum) é uma planta ornamental muito apreciada por suas folhas vibrantes e variadas, que apresentam uma combinação impressionante de cores, incluindo verde, amarelo, laranja, vermelho e até roxo. As folhas são geralmente largas, ovais ou lobadas, e podem ter formas e padrões distintos, variando entre as diferentes variedades da planta.
-
-                Nativa das regiões tropicais do sudeste asiático e das ilhas do Pacífico, o cróton é um arbusto que pode atingir alturas de até 1,5 metros, embora em ambientes internos geralmente permaneça menor. Ele prefere climas quentes e úmidos, e sua exposição ao sol pode intensificar as cores das folhas, fazendo com que fiquem ainda mais vibrantes.</p>
+            
+            <p class="apresentacao-conteudo-texto">Nativa das regiões tropicais do sudeste asiático e das ilhas do Pacífico, o cróton é um arbusto que pode atingir alturas de até 1,5 metros, embora em ambientes internos geralmente permaneça menor. Ele prefere climas quentes e úmidos, e sua exposição ao sol pode intensificar as cores das folhas, fazendo com que fiquem ainda mais vibrantes.</p>
             <p class="apresentacao-conteudo-texto">O cróton é frequentemente cultivado em jardins e como planta de interior, trazendo um toque de cor e textura aos ambientes. É uma planta que requer cuidados regulares, como regas consistentes e uma umidade adequada, além de ser sensível a temperaturas muito baixas. Embora seja bastante ornamental, as folhas do cróton podem ser tóxicas se ingeridas, portanto, deve-se ter cuidado ao colocá-lo em ambientes com animais de estimação ou crianças pequenas.</p>
         </section>
 
     </main>
 
-    <footer></footer>
+    <footer class="rodape">
+        <p>telefone para contato: (18) 3625xxxx</p>
+        <p>Endereço: Rua dos Fundadores n° 3000 Araçatuba-sp</p>
+        <br>
+        <img src="../fotos/logo-cantinho-rodape.jpg" alt="logo cantinho das flores" class="img-rodape">
+    </footer>
     
 </body>
 </html>
