--- a/produtos/suculenta.html
+++ b/produtos/suculenta.html
@@ -27,7 +27,12 @@
 
     </main>
 
-    <footer></footer>
+    <footer class="rodape">
+        <p>telefone para contato: (18) 3625xxxx</p>
+        <p>Endereço: Rua dos Fundadores n° 3000 Araçatuba-sp</p>
+        <br>
+        <img src="../fotos/logo-cantinho-rodape.jpg" alt="logo cantinho das flores" class="img-rodape">
+    </footer>
     
 </body>
 </html>
