--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
 
     <footer class="rodape">
-        <p> telefone para contato: (18) 3625xxxx</p>
+        <p>telefone para contato: (18) 3625xxxx</p>
+        <p>Endereço: Rua dos Fundadores n° 3000 Araçatuba-sp</p>
+        
 
     </footer>
     
