--- a/produto.html
+++ b/produto.html
@@ -62,6 +62,7 @@
 
     <footer class="rodape">
         <p>telefone para contato: (18) 3625xxxx</p>
+        <p>Endereço: Rua dos Fundadores n° 3000 Araçatuba-sp</p>
     </footer>
     
     
